# imgui_cmake_template

./: CMakeLists.txt  LICENSE
cmake/: ImGui.cmake  helper_functions.cmake
src/: CMakeLists.txt  main.cpp
src/backend/: window_position.cpp  window_position.h
src/context/: imgui_context.cpp  imgui_context.h
